# vardoger

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  LICENSE  MARKETPLACE_STATUS.md  PRD.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml
docs/: marketplace-status.md
plugins/_shared/: README.md
plugins/claude-code/: README.md  test_writer.py
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/hooks/: hooks.json
plugins/claude-code/skills/analyze/: SKILL.md
plugins/cline/: README.md  llms-install.md
plugins/codex/: README.md  marketplace.json  test_writer.py
plugins/codex/.codex-plugin/: plugin.json
plugins/codex/skills/analyze/: SKILL.md
plugins/copilot/: README.md  marketplace.json
plugins/copilot/.github/plugin/: plugin.json
plugins/copilot/skills/analyze/: SKILL.md
plugins/cursor/: README.md  install.sh  mcp.json  test_writer.py
plugins/cursor/.cursor-plugin/: plugin.json
plugins/docker-mcp/: README.md  server.yaml
plugins/mcp-registry/: README.md  server.json
plugins/mcpmux/: README.md  vardoger.json
plugins/openclaw/: README.md
plugins/openclaw/skills/analyze/: SKILL.md
plugins/windsurf/: README.md
scripts/: install-local.sh  render-skills.py  smoke-test-release.sh
src/vardoger/: __init__.py  __main__.py  analyze.py  checkpoint.py  cli.py  digest.py  feedback.py  mcp_server.py  models.py  personalization.py  quality.py  setup.py  staleness.py  test_checkpoint.py  test_digest.py
src/vardoger/history/: __init__.py  claude_code.py  cline.py  codex.py  copilot.py  cursor.py  models.py  openclaw.py  test_claude_code.py  test_codex.py  test_cursor.py  windsurf.py
src/vardoger/prompts/: __init__.py  analyze_skill_body.md  feedback_context.md  summarize.md  synthesize.md
src/vardoger/writers/: __init__.py  _projects.py  claude_code.py  cline.py  codex.py  copilot.py  cursor.py  openclaw.py  windsurf.py
tests/: conftest.py  test_analyze.py  test_checkpoint.py  test_cli.py  test_digest.py  test_feedback.py  test_history_claude.py  test_mcp_server.py  test_personalization.py  test_quality.py  test_staleness.py  test_writers.py
tests/history/: test_claude_code.py  test_cline.py  test_codex.py  test_copilot.py  test_cursor.py  test_extract_text.py  test_openclaw.py  test_windsurf.py
tests/prompts/: test_prompts.py
tests/writers/: test_claude_code_writer.py  test_cline_writer.py  test_codex_writer.py  test_copilot_writer.py  test_cursor_writer.py  test_openclaw_writer.py  test_windsurf_writer.py
