[project]
name = "vardoger"
version = "0.1.0"
description = "Personalize AI coding assistants by analyzing conversation history"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
vardoger = "vardoger.cli:main"

[project.urls]
Repository = "https://github.com/dstrupl/vardoger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vardoger"]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pytest>=9.0.3",
    "pytest-cov>=6.1",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["vardoger"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true
