[project]
name = "vardoger"
version = "0.1.0b1"
description = "Personalize AI coding assistants by analyzing conversation history"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "David Strupl", email = "dstrupl@gmail.com" },
]
keywords = ["ai", "coding-assistant", "personalization", "cursor", "claude", "codex", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
vardoger = "vardoger.cli:main"

[project.urls]
Repository = "https://github.com/dstrupl/vardoger"
Issues = "https://github.com/dstrupl/vardoger/issues"
Documentation = "https://github.com/dstrupl/vardoger#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vardoger"]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pytest>=9.0.3",
    "pytest-cov>=6.1",
    "ruff>=0.11",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "C90",  # mccabe complexity
    "PL",   # pylint
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
    "TRY",  # tryceratops
]

[tool.ruff.lint.isort]
known-first-party = ["vardoger"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "PLC0415", "PLR0913", "PTH123"]
# Deferred imports in these modules avoid import cycles and keep CLI startup fast.
"src/vardoger/cli.py" = ["PLR0915", "PLC0415"]
"src/vardoger/mcp_server.py" = ["PLC0415"]
"src/vardoger/quality.py" = ["PLC0415"]
"src/vardoger/staleness.py" = ["PLC0415"]
"src/vardoger/feedback.py" = ["PLC0415"]
# checkpoint state migrations compare against historical schema numbers.
"src/vardoger/checkpoint.py" = ["PLR2004", "PTH123"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["vardoger"]
branch = true

[tool.coverage.report]
exclude_also = [
    "@overload",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
